--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - "*"
   pull_request:
+  schedule:
+    - cron: '5 6 * * *'
 
 jobs:
   build:
@@ -13,9 +15,10 @@ jobs:
       fail-fast: false
 
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: docker/build-push-action@v1
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: build and publish docker
+        uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
