--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - "*"
   pull_request:
+  repository_dispatch:
+    types:
+      - build-trigger
 
 jobs:
   build:
@@ -23,15 +26,21 @@ jobs:
         with:
           format: YYYY-MM-DD
 
+      - name: Get latest version
+        run: |
+          version=$(curl -s https://static.rust-lang.org/dist/channel-rust-stable.toml | grep -A1 '\[pkg.rust\]' | grep version | grep -oE "[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]")
+          echo ::set-env name=RUST_VERSION::${version}
+
       - name: Build docker and publish
         uses: docker/build-push-action@v1
         env:
-          RUST_DATE: "${{ steps.current-time.outputs.formattedTime }}"
+          TAG1: "${{ env.RUST_VERSION }}-${{ env.RUST_CHANNEL }}"
+          TAG2: "${{ env.RUST_CHANNEL }}-${{ steps.current-time.outputs.formattedTime }}"
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
           repository: anderender/muslrust
-          build_args: CHANNEL=${{env.RUST_CHANNEL}}
-          tags: latest,${{env.RUST_CHANNEL}},${{env.RUST_CHANNEL}}-${{env.RUST_DATE}}
+          build_args: CHANNEL=${{ env.RUST_CHANNEL }}
+          tags: latest,${{ env.RUST_CHANNEL }},${{ env.TAG1 }},${{ env.TAG2 }}
           push: ${{ github.ref == 'ref/heads/master' }}
 
